# gke-hackathon

./: .dockerignore  .env.example  README.md  main.py  pyproject.toml
apps/anthos-mcp/: Dockerfile  README.md  port-forward.sh  pyproject.toml
apps/anthos-mcp/src/anthos_mcp/: main.py
apps/voice-bridge/: Dockerfile  README.md  pyproject.toml
apps/voice-bridge/src/voice_bridge/: main.py
apps/voice-bridge/src/voice_bridge/entities/: twilio.py
apps/voice-bridge/src/voice_bridge/routers/: health.py  twilio.py
apps/voice-bridge/src/voice_bridge/utils/: audio.py  env.py  logging.py  security.py
k8s/: .env.example  README.md  anthos-mcp.yaml  configmap.yaml  gateway.yaml  kustomization.yaml  voice-bridge.yaml
libs/adk-agents/: pyproject.toml
libs/adk-agents/src/adk_agents/agents/banking_agent/: agent.py
libs/adk-agents/src/adk_agents/agents/search_agent/: agent.py
libs/adk-agents/src/adk_agents/runtime/: factory.py  live_messaging.py  session_service.py
libs/shared-utils/: pyproject.toml
