[project]
name = "anthos-mcp"
version = "0.1.0"
description = "MCP Server for AI Agents to interact with bank-of-anthos services"
readme = "README.md"
authors = [{ name = "Julian Hecker" }]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
anthos-mcp = "anthos_mcp:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/anthos_mcp"]
